--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -3,12 +3,14 @@
 <head>
   <meta charset="utf-8">
   <title>Jewelryshop</title>
+
+  <link rel="stylesheet" href="https://bootswatch.com/4/cosmo/bootstrap.min.css">
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root></app-root>
+  <app-root>Loading.....</app-root>
 </body>
 </html>
